--- a/sextoTrimestre/proyecto/src/app/components/sergio/sidebar/sidebar.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
 
 <div *ngIf="mostrarMenuPerfil" class="profile-menu">
   <ul>
-    <li (click)="redirectTo('/admin-perfil')">Perfil</li>
+    <li (click)="redirectTo('/admin-perfil')">Ver Perfil</li>
     <li (click)="redirectTo('/edit-perfil')">Editar Perfil</li>
     <li (click)="redirectTo('/update-password')">Cambiar Contraseña</li>
     <li (click)="logout()">Cerrar Sesión</li>
