--- a/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.html
@@ -8,7 +8,8 @@
       <h1 class="titulo">Bienvenido Administrador</h1>
   <h3 class="sub-titulo">Formación ADSO</h3>
       <p>
-        Le damos la bienvenida, Administrador, asumiendo un papel clave en la gestión y administración de la información de nuestros usuarios. Su responsabilidad y flexibilidad son fundamentales para asegurar un entorno seguro y eficiente para todos los usuarios.</p>
+        Le damos la bienvenida, Administrador, asumiendo un papel clave en la gestión y administración de la información de nuestros usuarios. Su responsabilidad y flexibilidad son fundamentales para asegurar un entorno seguro y eficiente para todos los usuarios.
+      </p>
     </div>
     <div class="photo">
       <img src="assets/imagenes/imagen4.png" alt="imagen por el usuario">
