--- a/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.scss
@@ -3,53 +3,50 @@
 .container-vista{
   margin-left: 200px;
   padding: 20px;
+  overflow: hidden;
 }
 
 .titulo {
   font-family: 'Gowun Batang', serif;
-  font-size: 35px;
-  // font-weight: bold;
+  font-size: 36px;
+  font-weight: bold;
   color: #088a88;
   text-align: center;
-  margin-top: 20px; /* Reducido el espacio superior */
-  margin-bottom: 10px; /* Nuevo margen inferior */
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .sub-titulo {
   font-family: 'Gowun Batang', serif;
   color: #333;
   text-align: center;
-  margin-bottom: 20px; /* Nuevo margen inferior */
+  margin-bottom: 30px;
 }
 
 .contenedor {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90vh; /* Ajustar según necesidades */
+  height: 80vh;
 }
 
 .descripción {
-  font-size: 17px;
-  max-width: 500px;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  border-radius: 10px;
+  font-size: 18px;
+  max-width: 600px;
+  padding: 30px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+  border-radius: 20px;
   margin-right: 40px;
 }
 
 .photo {
   width: 300px;
   height: 300px;
-  // border-radius: 50%;
-  // overflow: hidden;
-  // box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .photo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  // border-radius: 10%;
 }
