--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
@@ -40,15 +40,11 @@
   </div>
 </nav>
 <h2 class="subtitulo mt-5">Actividades</h2>
-      <div class="container">
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let activity of activityList">
-              <h4>{{ activity.nombreArchivo }}</h4>
-              <p>{{ activity.comentario }}</p>
-              <a (click)="descargarArchivo(activity.archivoUrl)" class="btn btn-primary-ver-archivo">Ver archivo</a>
-          </li>
-        </ul>
-      </div>
+<div class="instagram-div">
+  <h1 class="titulo">Prueba</h1>
+  <button class="boton">Mi Botón</button>
+  <p>Buen día</p>
+</div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
