--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.scss
@@ -10,29 +10,49 @@
     font-style: normal;
 }
 
-
 /*Container*/
-.instagram-div {
-  margin-left: 30px;
-  max-width: 400px;
-  width: 100%;
-  background-color: #ffffff; /* Color de fondo del div */
-  border: 1px solid #e0e0e0; /* Borde similar al de Instagram */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra similar al de Instagram */
-  padding: 30px;
+
+.noticias-container {
+  display: flex;  // Añade esta línea para activar flexbox
+  flex-wrap: wrap;  // Permite que los elementos se envuelvan a la siguiente línea si no hay espacio suficiente
+  justify-content: space-around;  // Ajusta según tus preferencias para el espaciado horizontal
+}
+
+.titulo {
+  color: #0a7775;
   text-align: center;
+  font-weight: bolder;
+  font-family: "Outfit", sans-serif;
+  font-size: 25px;
+  font-style: normal;
+}
+
+.instagram-div {
+  margin-top: 15px;
+  margin-left: 30px;
+  max-width: 350px;
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 6px;
+  box-sizing: border-box;
+  
 }
 
 .instagram-div img {
-  max-width: 100%;
+  max-width: 80%; /* ajusta el tamaño según sea necesario */
   height: auto;
-  border-radius: 8px; /* Esquinas redondeadas similar al de Instagram */
+  border-radius: 8px;
   margin-bottom: 10px;
 }
 
 .instagram-div p {
-  font-size: 16px;
-  color: #262626; /* Color del texto similar al de Instagram */
+  margin-top: 10px;
+  font-size: 20px;
+  color: #262626;
 }
 
 /* Estilos Nav */
