--- a/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/vista-admin/vista-admin.component.scss
@@ -3,12 +3,12 @@
 .container-vista{
   margin-left: 200px;
   padding: 20px;
+  overflow: hidden;
 }
 
 .titulo {
   font-family: 'Gowun Batang', serif;
   font-size: 35px;
-  // font-weight: bold;
   color: #088a88;
   text-align: center;
   margin-top: 20px; /* Reducido el espacio superior */
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90vh; /* Ajustar según necesidades */
+  height: 80vh; /* Ajustar según necesidades */
 }
 
 .descripción {
@@ -52,4 +52,24 @@
   height: 100%;
   object-fit: cover;
   // border-radius: 10%;
+}
+
+@media (max-width: 900px) {
+  .container-vista {
+    margin-left: 0; /* Elimina el margen izquierdo */
+  }
+
+  .photo {
+    display: none; /* Oculta la imagen */
+  }
+
+  .contenedor {
+    flex-direction: column; /* Cambia la dirección del contenedor a columna */
+    align-items: center; /* Centra los elementos en el eje transversal */
+    height: auto; /* Establece la altura automática */
+  }
+
+  .descripción {
+    margin-right: 0; /* Elimina el margen derecho */
+  }
 }
