--- a/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.scss
@@ -1,4 +1,3 @@
-/* Estilos generales del cuerpo del documento */
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -6,70 +5,48 @@ body {
   height: 100vh;
 }
 
-/* Estilos de la barra de navegación */
-.navbar {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-bottom: 20px; /* Espacio entre la barra de navegación y el título */
-}
 
-.nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav .nav-item {
-  cursor: pointer;
-  margin-bottom: 10px;
-}
-
-.nav-link {
-  color: #088a88;
-}
-
-.nav-item:last-child .btn-primary {
-  cursor: pointer;
-}
-
-/* Estilos del contenedor principal */
 .container {
   text-align: center;
+  padding: 40px;
 }
 
-/* Estilos del título */
-.container h2 {
-  margin-bottom: 20px; /* Espacio entre el título y el contenedor */
+
+ h2 {
+  margin-bottom: 20px;
+  color: #088a88;
+  font-size: 25px;
 }
 
-/* Estilos del contenedor del formulario */
 .edit-form-container {
-  text-align: left; /* Alinea los elementos del formulario a la izquierda */
-  width: 400px; /* Ancho del contenedor del formulario */
-  margin: 0 auto; /* Centra horizontalmente el contenedor del formulario */
-  border: 1px solid #ccc; /* Borde gris */
-  padding: 0 20px 20px;
-  border-radius: 4px;
+  text-align: left;
+  width: 400px;
+  margin: 50px auto;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilos para etiquetas y campos de entrada en el formulario */
+
 form label,
 form input {
   display: block;
 }
 
-/* Estilo del borde inferior gris para los campos de entrada (90% de ancho) */
 form input {
   border: none;
   border-bottom: 1px solid #ccc;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   width: 90%;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
-/* Estilos del botón .btn-primary */
+
 .btn-primary {
-  background-color: #57a7a5;
+  background-color: #088a88;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -78,11 +55,28 @@ form input {
   margin-right: 20px;
 }
 
-/* Estilos de interacción con el botón */
 .btn-primary:hover {
-  background-color: #088a88;
+  background-color: #057373;
 }
 
 .container .btn-primary:active {
-  background-color: #088a88;
+  background-color: #046262;
+}
+
+@media (max-width: 400px) {
+
+  .edit-form-container {
+    width: 90%; /* Ajusta el ancho del contenedor para pantallas pequeñas */
+  }
+}
+
+
+@media (max-width: 300px) {
+  h2 {
+    font-size: 20px; /* Ajusta el tamaño del título para pantallas pequeñas */
+  }
+
+  .edit-form-container {
+    width: 80%; /* Ajusta el ancho del contenedor para pantallas pequeñas */
+  }
 }
