--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
@@ -1,6 +1,3 @@
-/* styles.css */
-
-/* Estilos generales del cuerpo del documento */
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -8,89 +5,58 @@ body {
   height: 100vh;
 }
 
-
 h2{
   margin-bottom: 30px;
   text-align: center;
+  color: #088a88;
+  font-size: 25px;
 }
 
-/* Estilo para el contenedor del formulario */
+.container {
+  text-align: center;
+  padding: 60px 20px;
+}
+
 .custom-form-container {
   width: 400px;
-  margin: 0 auto;
-  border: 1px solid #57a7a5; /* Borde de color #57a7a5 */
+  margin: 50px auto;
+  border: 1px solid #57a7a5;
   padding: 20px;
-  border-radius: 4px;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+
 }
 
-/* Estilo para el botón */
 .custom-button {
-  background-color: #088a88; /* Color de fondo del botón #088a88 */
+  background-color: #088a88;
   color: #fff;
   border: none;
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .custom-button:hover {
-  background-color: #057d7d; /* Cambio de color al pasar el mouse */
+  background-color: #057d7d;
 }
 
-/* Estilos de la barra de navegación */
-.navbar {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-bottom: 20px; /* Espacio entre la barra de navegación y el título */
-}
-
-.nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav .nav-item {
-  cursor: pointer;
-  margin-bottom: 10px;
-}
-
-.nav-link {
-  color: #088a88;
-}
-
-.nav-item:last-child .btn-primary {
-  cursor: pointer;
-}
-
-/* Estilos del contenedor principal */
-.container {
-  text-align: center;
-}
-
-/* Estilos del título */
-.container h2 {
-  margin-bottom: 20px; /* Espacio entre el título y el contenedor */
-}
-
-/* Estilos del contenedor del formulario */
 .edit-form-container {
-  text-align: left; /* Alinea los elementos del formulario a la izquierda */
-  width: 400px; /* Ancho del contenedor del formulario */
-  margin: 0 auto; /* Centra horizontalmente el contenedor del formulario */
-  border: 1px solid #ccc; /* Borde gris */
+  margin-top: 40px auto;
+  text-align: left;
+  width: 400px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
   padding: 20px;
   border-radius: 4px;
 }
 
-/* Estilos para etiquetas y campos de entrada en el formulario */
 form label,
 form input {
   display: block;
 }
 
-/* Estilo del borde inferior gris para los campos de entrada (90% de ancho) */
 form input {
   border: none;
   border-bottom: 1px solid #ccc;
@@ -98,7 +64,6 @@ form input {
   width: 90%;
 }
 
-/* Estilos del botón .btn-primary */
 .btn-primary {
   background-color: #57a7a5;
   color: #fff;
@@ -107,9 +72,9 @@ form input {
   padding: 10px 20px;
   cursor: pointer;
   margin-right: 20px;
+  transition: background-color 0.3s ease;
 }
 
-/* Estilos de interacción con el botón */
 .btn-primary:hover {
   background-color: #088a88;
 }
@@ -117,3 +82,45 @@ form input {
 .container .btn-primary:active {
   background-color: #088a88;
 }
+
+@media (max-width: 400px) {
+  /* Estilos del título */
+  h2 {
+    font-size: 18px; /* Ajusta el tamaño del título para pantallas más pequeñas */
+  }
+
+  /* Estilo para el contenedor principal */
+  .container {
+    padding: 20px; /* Ajusta el espacio arriba y abajo del contenedor para pantallas más pequeñas */
+  }
+
+  /* Estilo para el contenedor del formulario */
+  .custom-form-container,
+  .edit-form-container {
+    width: 90%; /* Ajusta el ancho del formulario para pantallas más pequeñas */
+    margin: 30px auto; /* Centra el formulario y ajusta el margen superior para pantallas más pequeñas */
+  }
+
+  /* Estilo para el botón */
+  .custom-button,
+  .btn-primary {
+    padding: 8px 12px; /* Ajusta el espacio interno del botón para pantallas más pequeñas */
+  }
+
+  /* Estilos del contenedor del formulario */
+  .edit-form-container {
+    margin: 20px auto; /* Ajusta el margen superior para pantallas más pequeñas */
+  }
+
+  /* Estilos de la barra de navegación */
+  .navbar {
+    margin-bottom: 5px; /* Ajusta el espacio entre la barra de navegación y el título para pantallas más pequeñas */
+  }
+
+  /* Estilos de interacción con el botón .btn-primary */
+  .btn-primary:hover,
+  .custom-button:hover {
+    background-color: #057373; /* Cambio de color al pasar el mouse para pantallas más pequeñas */
+  }
+}
+
