--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="form-group">
       <label for="imagen">Imagen Opcional:</label>
-      <input type="file" class="form-control-file" id="imagen" (change)="onFileSelected($event)">
+      <input type="file" class="form-control-file" id="imagen" name="imagenOpcional" (change)="onFileSelected($event)" accept="image/*">
     </div>
     <button type="submit" class="btn btn-primary">Crear Blog</button>
   </form>
