Se actualizo index principal y componente katalina

--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -22,7 +22,7 @@
             </li>
             <div class="dropdown">
               <button class="dropdown-button">
-                <span class="material-symbols-outlined">more_horiz</span>
+                <span class="material-symbols-outlined">person</span>
               </button>
               <div class="dropdown-content">
                 <li class="nav-item">
@@ -39,10 +39,10 @@
         </ul>
   </div>
 </nav>
-<h1 class="titulo">Bienvenido Aprendiz</h1>
+<h1 class="titulo">Bienvenido aprendiz</h1>
 <h4 class="sub-titulo">Formacion ADSO</h4>
   <div class="descripción">
-    <p >Bienvenido a ACANNER, una plataforma que busca mejorar la gestión del tiempo y el control de tus actividades pendientes. Destacamos por nuestra colaboración con el SENA (Servicio Nacional de Aprendizaje), lo que te proporciona acceso a recursos educativos para enriquecer tu crecimiento personal y profesional.</p>
+    <p>Bienvenido a ACANNER, una plataforma que busca mejorar la gestión del tiempo y el control de tus actividades pendientes. Destacamos por nuestra colaboración con el SENA (Servicio Nacional de Aprendizaje), lo que te proporciona acceso a recursos educativos para impulsar tu desarrollo personal y profesional.</p>
   </div>
   <div class="imagen">
     <img class="imagen img-fluid" src="assets/imagenes/Aprendiz.png" alt="Aprendiz">
