--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
@@ -18,14 +18,11 @@
               <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
             </li>
             <li class="nav-item">
-              <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
-            </li>
-            <li class="nav-item">
               <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
             </li>
             <div class="dropdown">
               <button class="dropdown-button">
-                <span class="material-symbols-outlined">more_horiz</span>
+                <span class="material-symbols-outlined">person</span>
               </button>
               <div class="dropdown-content">
                 <li class="nav-item">
@@ -42,8 +39,8 @@
 <h2 class="subtitulo mt-5">Actividades</h2>
 <div class="instagram-div">
   <h1 class="titulo">Prueba</h1>
-  <button class="boton">Mi Botón</button>
-  <p>Buen día</p>
+  <p><strong>Descripción:</strong> Buen día</p>
+  <button class="boton">Ver Archivo</button>
 </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
