--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.scss
@@ -5,10 +5,10 @@
     color: #008a88;
     font-weight: bold;
     text-align: left;
-    margin-left: 200px;
+    margin-left: 180px;
     margin-top: 10%;
     font-family: "Outfit", sans-serif;
-    font-size: 50px;
+    font-size: 46px;
     font-style: normal;
 }
 .sub-titulo{
@@ -24,14 +24,14 @@
     text-align: center;
     margin-top: 15px;
     margin-left: 18%;
-    width: 325px; 
-    height: 350px;
+    width: 300px; 
+    height: 325px;
 }
 
 .imagen {
-    margin-top: -220px;
+    margin-top: -250px;
     margin-left: 350px;
-    height: 300px;
+    height: 450px;
     width: 500px;
     border-radius: 10px;
 }
@@ -52,7 +52,7 @@ nav{
 }
 
 .nav-link:hover{
-  color: rgb(12, 12, 12);
+  color: rgb(255, 255, 255);
 }
 .nombre{
   padding: 10px;
@@ -88,7 +88,7 @@ nav{
 }
 
 /* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
-@media (max-width: 601px) {
+@media (max-width: 700px) {
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -118,7 +118,6 @@ nav{
     display: block;
   }
 }
-
 
 /* Estilo del dropdown */
 .otro {
@@ -160,4 +159,26 @@ button {
 
 .dropdown-item:hover {
   background-color: #0f0f0f;
+}
+
+@media screen and (max-width: 600px) {
+  .titulo {
+      margin-left: 20%;
+      font-size: 200%;
+  }
+
+  .sub-titulo {
+      margin-left: 30%;
+  }
+
+  .descripción {
+      margin-left: 15%;
+  }
+
+  .imagen {
+      margin-top: -15vw;
+      margin-left: 10%;
+      height: 70%;
+      width: 80%;
+  }
 }
