--- a/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.scss
@@ -1,19 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+.titulo {
+  margin-top: 30px;
+  margin-left: 600px;
+  color: #088a88;
+  font-family: "Outfit", sans-serif;
+  font-weight: bolder;
+  font-size: 50px;
+  font-style: normal;
+}
+
+/*Perfil*/
 .perfil-detalle {
-  margin-left: 200px;
-  margin-top: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 1000px; 
-  height: 300px;
+  margin-left: 350px;
+  margin-top: 50px;
+  height: 400px;
+  max-width: 700px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 .foto {
-  margin-right: -1000px;
+  margin-left: -300px;
+  margin-top: 30px;
   border: 1px solid #ccc;
   border-radius: 50%;
-  overflow: hidden;
 }
+
+.information{
+  font-size: 15px;
+  margin-left: 350px;
+  margin-top: -200px;
+  text-align: left;
+}
+
 .font-weight-bold{
   font-weight: bold;
 }
@@ -22,7 +44,12 @@ span {
   font-weight: normal;
 }
 
+/*Botones*/
+.botones{
+  margin: 80px;
+}
 .boton {
+    margin: 10px;
     background-color: #088a88;
     color: #fff; 
     padding: 10px 20px; 
@@ -30,52 +57,19 @@ span {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin: 10px ;
   }
   
   .boton:hover {
-    background-color: #067e7c; /* Nuevo color al pasar el mouse sobre el botón */
+    background-color: #0f9b98; 
   }
 
-.information{
-    margin-top: 50px;
-    text-align: left;
+/* Estilos Nav */
+nav{
+  background-color: #008a88;
 }
-
-h1 {
-    margin-top: 20px;
-    font-size: 50px;
-    margin-left: 400px;
-    flex-grow: 15; 
-    color: #088a88;
-    font-family: 'Lobster',sans-serif;
-}
-
-  button {
+button {
   color: #fff;
   }
-  
-  
-
-/* Responsive */
- @media (max-width: 601px){
-
-    .perfil-detalle {
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-      max-width: 500px;
-      width: 80%;
-      position: absolute;
-      top: 70%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      
-  }
-  
-  }
-
 /* Estilos Nav */
 nav{
   background-color: #008a88;
@@ -92,7 +86,7 @@ nav{
 }
 
 .nav-link:hover{
-  color: rgb(12, 12, 12);
+  color: rgb(255, 255, 255);
 }
 .nombre{
   padding: 10px;
@@ -128,7 +122,7 @@ nav{
 }
 
 /* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
-@media (max-width: 601px) {
+@media (max-width: 700px) {
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -176,6 +170,7 @@ button {
   border-radius: 10px; /* Añadido para esquinas redondas */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  cursor: pointer;
 }
 
 .dropdown:hover .dropdown-content {
@@ -199,4 +194,38 @@ button {
 
 .dropdown-item:hover {
   background-color: #0f0f0f;
+}
+
+@media screen and (max-width: 700px) {
+  /* Estilos específicos para pantallas de 700 píxeles o menos */
+  .titulo {
+    margin-left: 30%;
+  }
+
+  .perfil-detalle {
+    margin-left: 20%;
+    margin-top: 5%;
+    max-width: 70%;
+    height: 80%;
+  }
+
+  .foto {
+    margin-left: -5%;
+    margin-top: 5%;
+  }
+
+  .information {
+    margin-left: 0%;
+    margin-top: 5%;
+    text-align: center;
+  }
+
+  .botones {
+    margin: 5%;
+  }
+
+  .boton {
+    margin: 1%;
+    padding: 1% 2%;
+  }
 }
