--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.scss
@@ -9,15 +9,7 @@
     font-size: 50px;
     font-style: normal;
 }
-
-/*Container*/
-
-.noticias-container {
-  display: flex;  // Añade esta línea para activar flexbox
-  flex-wrap: wrap;  // Permite que los elementos se envuelvan a la siguiente línea si no hay espacio suficiente
-  justify-content: space-around;  // Ajusta según tus preferencias para el espaciado horizontal
-}
-
+/* Container */
 .titulo {
   color: #0a7775;
   text-align: center;
@@ -29,8 +21,7 @@
 
 .instagram-div {
   margin-top: 20px;
-  margin-left: 30px;
-  max-width: 350px;
+  max-width: 300px;
   width: 100%;
   background-color: #ffffff;
   border-radius: 10px;
@@ -39,11 +30,10 @@
   padding: 10px;
   margin-bottom: 6px;
   box-sizing: border-box;
-  
 }
 
 .instagram-div img {
-  max-width: 80%; /* ajusta el tamaño según sea necesario */
+  max-width: 80%;
   height: auto;
   border-radius: 8px;
   margin-bottom: 10px;
@@ -53,6 +43,19 @@
   margin-top: 10px;
   font-size: 15px;
   color: #262626;
+}
+
+.noticias-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+/* Media Query para pantallas más pequeñas (ej. 600px) */
+@media (max-width: 600px) {
+  .instagram-div {
+    max-width: 80%; /* Ajusta el ancho al 100% para ocupar todo el ancho de la pantalla */
+  }
 }
 
 /* Estilos Nav */
