--- a/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
@@ -1,45 +1,34 @@
 <body>
   <div class="degradado"></div>
-  <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand black-title" href="#">
-      <img src="assets\imagenes\acanner.png" alt="Logo" width="50" height="50">
-      A C A N N E R
-    </a>
-
-
-    <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/registro">Registro</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-
-
+  <nav class="navbar">
+    <div class="container-fluid">
+      <a class="nav-link nombre" >Acanner</a>
+          <div class="menu-icon" (click)="toggleMenu()">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+          <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
+              <li class="nav-item">
+                <a routerLink="/login" class="nav-link" aria-current="page">Iniciar Sesión</a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/registro" class="nav-link">Registro</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
   <main>
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-6">
-          <h1 class="display-4 fw-bold lh-1 mb-3 text-left my-auto">Bienvenidos a Acanner, tu compañero en la
-            planificación académica.</h1>
-          <p class="lead text-left my-auto">Explora tus cursos, actividades, anuncios y solicita asistencia a través de
-            nuestra plataforma web académica diseñada especialmente para la formación ADSO en el SENA, utilizando la
-            Ficha 2558104.
-          </p>
+          <h1 class="titulo">Bienvenidos a Acanner, tu aliado en la planificación académica</h1>
+          <p class="descripcion">Descubre tus cursos, actividades y anuncios de manera fácil y solicita asistencia a través de nuestra plataforma web académica 
+          personalizada para la formación ADSO en el SENA. ¡Innovamos juntos en tu aprendizaje!</p>
         </div>
         <div class="col-md-6">
           <div class="d-flex justify-content-center">
-            <img src="assets\imagenes\background9.png" class="img-fluid" alt="Imagen" style="max-height: 400px; width: auto;">
+            <img src="assets\imagenes\index.png" class="img-fluid" alt="Imagen" style="max-height: 400px; width: auto;">
           </div>
         </div>
       </div>
