--- a/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/statistics-instructores/statistics-instructores.component.html
@@ -1,48 +1,5 @@
-<!--
+<app-sidebar></app-sidebar>
 <div class="container">
-  <app-ver-estadisticas></app-ver-estadisticas>
-  <h2>Estadísticas de Instructores</h2>
-
-  <form (ngSubmit)="applyFilters()" #filtroForm="ngForm">
-    <div class="filters">
-      <label>Filtrar por Ficha:</label>
-      <select [(ngModel)]="selectedFicha" name="selectedFicha" ngModel>
-        <option value="">Todos</option>
-        <option value="2558104">2558104</option>
-        <option value="1800002">1800002</option>
-        <option value="1231236">1231236</option>
-      </select>
-
-      <button type="submit">Aplicar Filtros</button>
-    </div>
-  </form>
-
-  <table class="custom-table">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Fecha de Nacimiento</th>
-        <th>Ficha</th>
-        <th>Correo</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let instructor of filteredInstructores">
-        <td>{{ instructor.id_usuario }}</td>
-        <td>{{ instructor.primer_nombre }} {{ instructor.segundo_nombre }}</td>
-        <td>{{ instructor.primer_apellido }} {{ instructor.segundo_apellido }}</td>
-        <td>{{ instructor.fecha_nacimiento }}</td>
-        <td>{{ instructor.ficha }}</td>
-        <td>{{ instructor.correo }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div> -->
-
-<div class="container">
-  <!-- <app-ver-estadisticas></app-ver-estadisticas> -->
 
   <div class="statistics-container">
     <h2>Estadísticas de Instructores</h2>
@@ -50,11 +7,14 @@
     <form (ngSubmit)="applyFilters()" #filtroForm="ngForm">
       <div class="filters">
         <label>Filtrar por Ficha:</label>
-        <select [(ngModel)]="selectedFicha" name="selectedFicha" ngModel>
+        <select [(ngModel)]="selectednumeroFicha" name="selectednumeroFicha" ngModel>
           <option value="">Todos</option>
-          <option value="2558104">2558104</option>
-          <option value="1800002">1800002</option>
-          <option value="1231236">1231236</option>
+          <option value="1">2558104</option>
+          <option value="2">1800002</option>
+          <option value="3">1231236</option>
+          <option value="4">2634256</option>
+          <option value="5">2789008</option>
+
         </select>
 
         <button type="submit">Aplicar Filtros</button>
@@ -64,7 +24,7 @@
     <table class="custom-table">
       <thead>
         <tr>
-          <th>ID</th>
+          <th>Documento</th>
           <th>Nombre</th>
           <th>Apellido</th>
           <th>Fecha de Nacimiento</th>
@@ -74,11 +34,11 @@
       </thead>
       <tbody>
         <tr *ngFor="let instructor of filteredInstructores">
-          <td>{{ instructor.id_usuario }}</td>
-          <td>{{ instructor.primer_nombre }} {{ instructor.segundo_nombre }}</td>
-          <td>{{ instructor.primer_apellido }} {{ instructor.segundo_apellido }}</td>
-          <td>{{ instructor.fecha_nacimiento }}</td>
-          <td>{{ instructor.ficha }}</td>
+          <td>{{ instructor.documento }}</td>
+          <td>{{ instructor.primerNombre }} {{ instructor.segundoNombre }}</td>
+          <td>{{ instructor.primerApellido }} {{ instructor.segundoApellido }}</td>
+          <td>{{ instructor.fechaNacimiento }}</td>
+          <td>{{ instructor.numeroFicha }}</td>
           <td>{{ instructor.correo }}</td>
         </tr>
       </tbody>
